[gd_scene load_steps=5 format=3 uid="uid://dls3v45h1g8lc"]

[ext_resource type="Script" uid="uid://cgswuf67g2g8t" path="res://HUD/main_menu/settings/settings_ui.gd" id="1_3bwt1"]
[ext_resource type="Texture2D" uid="uid://wbxalfduc38h" path="res://HUD/main_menu/settings/boarder.png" id="1_3r41m"]
[ext_resource type="StyleBox" uid="uid://b5jsbhea3xrwy" path="res://HUD/main_menu/settings/settings_stylebox_combobox.tres" id="2_qiykd"]

[sub_resource type="Theme" id="Theme_qiykd"]
OptionButton/colors/font_color = Color(1, 1, 1, 1)
OptionButton/colors/font_outline_color = Color(0, 0, 0, 1)
OptionButton/constants/h_separation = 10
OptionButton/styles/hover = ExtResource("2_qiykd")
OptionButton/styles/normal = ExtResource("2_qiykd")
OptionButton/styles/pressed = ExtResource("2_qiykd")

[node name="SettingsUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3bwt1")
metadata/_edit_lock_ = true

[node name="black_panel" type="Panel" parent="."]
layout_mode = 0
offset_left = -60.0
offset_top = -85.0
offset_right = 1943.0
offset_bottom = 1165.0

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 308.0
offset_top = 57.0
offset_right = 1654.0
offset_bottom = 912.0
texture = ExtResource("1_3r41m")
patch_margin_left = 100
patch_margin_top = 100
patch_margin_right = 100
patch_margin_bottom = 100

[node name="SETTINGS" type="Label" parent="NinePatchRect"]
layout_mode = 0
offset_left = 436.0
offset_top = -20.0
offset_right = 975.0
offset_bottom = 257.0
theme_override_colors/font_shadow_color = Color(0.24840015, 0.24840018, 0.24840012, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 10
theme_override_constants/outline_size = 7
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 100
text = "SETTINGNS
"

[node name="AUDIO PROPERTIES" type="Label" parent="NinePatchRect"]
layout_mode = 0
offset_left = 90.0
offset_top = 114.0
offset_right = 556.0
offset_bottom = 183.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2627451)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 4
theme_override_constants/shadow_outline_size = 5
theme_override_font_sizes/font_size = 50
text = "AUDIO PROPERTIES"

[node name="music_label" type="Label" parent="NinePatchRect"]
layout_mode = 0
offset_left = 418.0
offset_top = 180.0
offset_right = 513.0
offset_bottom = 222.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2627451)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 4
theme_override_constants/shadow_outline_size = 5
theme_override_font_sizes/font_size = 30
text = "MUSIC"

[node name="music_slider" type="HSlider" parent="NinePatchRect/music_label"]
layout_mode = 0
offset_left = 234.0
offset_top = 18.0
offset_right = 696.0
offset_bottom = 34.0

[node name="sound_sfx_label" type="Label" parent="NinePatchRect"]
layout_mode = 0
offset_left = 347.0
offset_top = 225.0
offset_right = 514.0
offset_bottom = 267.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2627451)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 4
theme_override_constants/shadow_outline_size = 5
theme_override_font_sizes/font_size = 30
text = "SOUND SFX"

[node name="sound_sfx_slider" type="HSlider" parent="NinePatchRect/sound_sfx_label"]
layout_mode = 0
offset_left = 306.0
offset_top = 18.0
offset_right = 768.0
offset_bottom = 34.0

[node name="VIDEO PROPERTIES" type="Label" parent="NinePatchRect"]
layout_mode = 0
offset_left = 89.0
offset_top = 335.0
offset_right = 555.0
offset_bottom = 404.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2627451)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 4
theme_override_constants/shadow_outline_size = 5
theme_override_font_sizes/font_size = 50
text = "VIDEO PROPERTIES"

[node name="screen_mode_label" type="Label" parent="NinePatchRect"]
layout_mode = 0
offset_left = 317.0
offset_top = 406.0
offset_right = 527.0
offset_bottom = 448.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2627451)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 4
theme_override_constants/shadow_outline_size = 5
theme_override_font_sizes/font_size = 30
text = "SCREEN MODE"

[node name="screenmode_slider" type="OptionButton" parent="NinePatchRect/screen_mode_label"]
layout_mode = 0
offset_left = 334.0
offset_top = -9.0
offset_right = 671.0
offset_bottom = 37.0
theme = SubResource("Theme_qiykd")
selected = 0
item_count = 3
popup/item_0/text = "EXCLUSIVE FULLSCREEN"
popup/item_0/id = 0
popup/item_1/text = "FULLSCREEN"
popup/item_1/id = 1
popup/item_2/text = "WINDOW"
popup/item_2/id = 2

[node name="resolution_label" type="Label" parent="NinePatchRect"]
layout_mode = 0
offset_left = 339.0
offset_top = 457.0
offset_right = 527.0
offset_bottom = 499.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2627451)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 4
theme_override_constants/shadow_outline_size = 5
theme_override_font_sizes/font_size = 30
text = "RESOLUTION"

[node name="resolution_slider" type="OptionButton" parent="NinePatchRect/resolution_label"]
layout_mode = 0
offset_left = 309.0
offset_top = -5.0
offset_right = 646.0
offset_bottom = 41.0
theme = SubResource("Theme_qiykd")
selected = 0
item_count = 3
popup/item_0/text = "1920x1080"
popup/item_0/id = 0
popup/item_1/text = "1280x720"
popup/item_1/id = 1
popup/item_2/text = "640x480"
popup/item_2/id = 2

[node name="fps_label" type="Label" parent="NinePatchRect"]
layout_mode = 0
offset_left = 473.0
offset_top = 508.0
offset_right = 524.0
offset_bottom = 550.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2627451)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 4
theme_override_constants/shadow_outline_size = 5
theme_override_font_sizes/font_size = 30
text = "FPS"

[node name="FPS" type="OptionButton" parent="NinePatchRect/fps_label"]
layout_mode = 0
offset_left = 178.0
offset_top = -3.0
offset_right = 514.0
offset_bottom = 43.0
theme = SubResource("Theme_qiykd")
selected = 0
item_count = 4
popup/item_0/text = "NO LIMIT"
popup/item_0/id = 0
popup/item_1/text = "24"
popup/item_1/id = 1
popup/item_2/text = "60"
popup/item_2/id = 2
popup/item_3/text = "120"
popup/item_3/id = 3

[node name="confirm_button" type="Button" parent="NinePatchRect"]
layout_mode = 0
offset_left = 601.0
offset_top = 756.0
offset_right = 838.0
offset_bottom = 820.0
theme_override_font_sizes/font_size = 31
theme_override_styles/normal = ExtResource("2_qiykd")
theme_override_styles/pressed = ExtResource("2_qiykd")
theme_override_styles/hover = ExtResource("2_qiykd")
text = "CONFIRM"

[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="value_changed" from="NinePatchRect/music_label/music_slider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="NinePatchRect/sound_sfx_label/sound_sfx_slider" to="." method="_on_sound_sfx_slider_value_changed"]
[connection signal="item_selected" from="NinePatchRect/screen_mode_label/screenmode_slider" to="." method="_screenmode_slider_item_selected"]
[connection signal="item_selected" from="NinePatchRect/resolution_label/resolution_slider" to="." method="_on_resolution_slider_item_selected"]
[connection signal="item_selected" from="NinePatchRect/fps_label/FPS" to="." method="_on_fps_item_selected"]
[connection signal="pressed" from="NinePatchRect/confirm_button" to="." method="_on_confirm_button_pressed"]
